--- a/notebooks/train-yolo11-object-detection-on-custom-dataset.ipynb
+++ b/notebooks/train-yolo11-object-detection-on-custom-dataset.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/myshendrik/Heron-Hunter-/blob/main/notebooks/train-yolo11-object-detection-on-custom-dataset.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "oe9vkEvFABbN"
       },
       "source": [
@@ -547,10 +557,10 @@
       "metadata": {
         "id": "D2YkphuiaE7_",
         "collapsed": true,
-        "outputId": "cad023d6-1f35-48a6-e330-e6cdb270cf03",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cad023d6-1f35-48a6-e330-e6cdb270cf03"
       },
       "outputs": [
         {
@@ -973,10 +983,10 @@
       "metadata": {
         "id": "Wjc1ctZykYuf",
         "collapsed": true,
-        "outputId": "037d66bb-5931-463e-dfc5-de82e327b006",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "037d66bb-5931-463e-dfc5-de82e327b006"
       },
       "outputs": [
         {
@@ -1256,11 +1266,11 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "GU1kVwnXKLmT",
-        "outputId": "5f2be9c0-629e-4223-8017-ab4007b89120",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GU1kVwnXKLmT",
+        "outputId": "5f2be9c0-629e-4223-8017-ab4007b89120"
       },
       "execution_count": 1,
       "outputs": [
@@ -1343,12 +1353,12 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "1GzmjvqwFWVN",
-        "outputId": "aa51b90d-86df-463b-d08e-18d13c8477e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "1GzmjvqwFWVN",
+        "outputId": "aa51b90d-86df-463b-d08e-18d13c8477e5"
       },
       "execution_count": 2,
       "outputs": [
@@ -1641,11 +1651,11 @@
         "!yolo predict task=detect model=/content/runs/detect/train/weights/best_saved_model/best_float32.tflite imgsz=640 source=/content/datasets/Blue-Heron-Raspberry-1/test/images"
       ],
       "metadata": {
-        "id": "B5DBP4KfK-sU",
-        "outputId": "ede412e0-0c80-4f91-babd-8e8cdca8cfdf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "B5DBP4KfK-sU",
+        "outputId": "ede412e0-0c80-4f91-babd-8e8cdca8cfdf"
       },
       "execution_count": 6,
       "outputs": [
@@ -1867,11 +1877,11 @@
         "!yolo val task=detect model=/content/runs/detect/train/weights/best_saved_model/best_float32.tflite imgsz=640 data=/content/datasets/Blue-Heron-Raspberry-1/data.yaml"
       ],
       "metadata": {
-        "id": "TJGWhYkxMVG9",
-        "outputId": "bcf52691-8ef0-4e16-acce-e4ad9e646959",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TJGWhYkxMVG9",
+        "outputId": "bcf52691-8ef0-4e16-acce-e4ad9e646959"
       },
       "execution_count": 7,
       "outputs": [
@@ -1941,7 +1951,8 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "gpuClass": "standard",
     "kernelspec": {
